2006-05-28  Gabor Csardi  <csardi@kzoo.edu>

	* src/foreign.c (igraph_write_graph_lgl) : attribute handling added

	* src/foreign.c (igraph_write_graph_ncol) : memory leaks removed

2006-05-25  Gabor Csardi  <csardi@kzoo.edu>

	* src/foreign.c (igraph_write_graph_ncol) : attribute handling added
	* src/attributes.c (igraph_i_attribute_has_attr) : bug corrected
	(igraph_i_attribute_gettype) : added
	* examples/simple/igraph_read_graph_lgl.c : added

	* src/measure_dynamics.c (igraph_measure_dynamics_idwindow) : small (?)
	bug eliminated (thanks Elliot)
	
2006-05-20  Gabor Csardi  <csardi@kzoo.edu>

	* src/measure.dynamics.c (igraph_measure_dynamics_id) : cleaner
	implementation
	(igraph_measure_dynamics_idwindow, igraph_measure_dynamics_idwindow_st)
	: added
	
2006-05-17  Gabor Csardi  <csardi@kzoo.edu>

	* src/games.c (igraph_recent_degree_game) : added

2006-05-16  Gabor Csardi  <csardi@kzoo.edu>

	* src/igraph_psumtree.c (igraph_psumtree_init, igraph_psumtree_destroy)
	(igraph_psumtree_update, igraph_psumtree_size, igraph_psumtree_sum) :
	added
	* examples/simple/igraph_psumtree.c : added

	* src/games.c (igraph_nonlinear_barabasi_game) : added
	
2006-05-15  Tamas Nepusz  <ntamas@rmki.kfki.hu>

	* src/structural_properties.c (igraph_subgraph) : small bugfix.
	  Fixes a NULL pointer reference in the Python interface.
	* interfaces/python/edgeobject.[ch],
	  interfaces/python/edgeseqobject.c,
	  interfaces/python/graphobject.[ch],
	  interfaces/python/igraphmodule.c,
	  interfaces/python/test.py,
	  interfaces/python/vertexobject.c,
	  interfaces/python/vertexseqobject.c : new attribute interface,
	  partial implementation

2006-05-14  Gabor Csardi  <csardi@kzoo.edu>

	* src/foreign.c (igraph_write_graph_lgl, igraph_write_graph_edgelist) :
	moved declaration to beginning of the block, works with older gcc

	* src/foreign-pajek-parser.y : added some semicolons to be compatible
	with older bison versions
	
2006-05-12  Gabor Csardi  <csardi@kzoo.edu>
